# ai-absa

./: .gitignore  README.md  analyze_reddit.py  main.py  pyproject.toml
data/processed/: mendeley_bio_report.json  mendeley_bio_tagged.conll  mendeley_bio_tagged.csv
data/processed/final_data/: test.jsonl  val.jsonl
data/processed/splits_v2/: test_v2.jsonl  val_v2.jsonl
data/raw/: mendeley.csv
docs/: baseline_model.md  baseline_summary.md  data_contract.md  data_report.md  data_report_v2.md
src/data/: bio_tagging.py  build_absa_dataset_v2.py  data_loader.py  dataset.py  hmm_aspect_extractor.py  industrial_filter.py  industrial_selector_100k_v4.py  preprocess.py  schemas.py  train_hmm_aspect_extractor.py
src/evaluation/: evaluate.py
src/models/: __init__.py  hmm_aspect_extractor.py  model.py
src/models/basic/: __init__.py  aspect_detector.py  baseline_lexicons.py  baseline_types.py  sentiment_model.py  sentiment_rules.py  text_utils.py
src/training/: train_hmm_aspect_extractor.py
src/utils/: device.py
